# konproz-rag

./: .env  .gitignore  README.md  pyproject.toml
src/: app.py  dependency.py
src/core/: settings.py
src/core/domain/: embedding_generator.py  pdf_loader.py  rag_pipeline.py  vector_db.py
src/core/models/: rag_request.py  rag_response.py
src/core/routers/: rag.py
